# ShieldWall

./: .claudeignore  .gitignore  CMakeLists.txt  README.md  package.json
examples/: express-gateway.js
gateway/: README.md  fingerprint.go  gateway_test.go  go.mod  main.go  parser.go  proxy.go
reports/: report-monthly-2026-04-25.json
rules/: api_security.shield  cloud.shield  cmdi.shield  deserialization.shield  proto_pollution.shield  protocol.shield  sqli.shield  traversal.shield  xss.shield
src/: cli.js  index.js
src/core/: AhoCorasick.cpp  AhoCorasick.hpp  ReconTracker.cpp  ReconTracker.hpp  RuleMatcher.cpp  RuleMatcher.hpp  RuleParser.cpp  RuleParser.hpp  WafEngine.cpp  WafEngine.hpp  WafTypes.hpp  advisor.js  aho-corasick.js  decoder.js  engine.js  logger.js  mitigation.js  recon-tracker.js  reporting.js  rule-matcher.js  rule-parser.js
src/dashboard/: server.js
src/dashboard/public/: dashboard.css  dashboard.js  index.html
src/modules/: AnomalyDetector.cpp  AnomalyDetector.hpp  BruteForceGuard.cpp  BruteForceGuard.hpp  DdosProtector.cpp  DdosProtector.hpp  RateLimiter.cpp  RateLimiter.hpp  SmartAnomalyDetector.cpp  SmartAnomalyDetector.hpp  adaptive-baselines.js  anomaly.js  bot-detection.js  brute-force.js  ddos-protection.js  fingerprinter.js  header-security.js  rate-limiter.js  reputation.js  sequence-anomaly.js  session-anomaly.js  smart-anomaly.js  trap-router.js
src/playground/: server.js  stresser.js
src/playground/public/: index.html
